dynamically created tr and td for hs table // not aligning the way it should // pushing bc i am still having the issue w ls & going to ask bcs

--- a/assets/style.css
+++ b/assets/style.css
@@ -74,3 +74,7 @@ table.center {
   margin-left: auto;
   margin-right: auto;
 }
+
+#highscoresTable {
+  text-align: center;
+}
